--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог продукции</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/style.min.css" rel="stylesheet" type="text/css">
   <script src="js/picturefill.js"></script>
 </head>
 
@@ -494,115 +494,115 @@
         <a class="find-all-goods__show-all-goods" href="show-all.html" aria-label="show all button">Показать все</a>
       </div>
     </section>
-    <section class="additional-goods">
-      <h2 class="additional-goods__hidden-header">Additional goods</h2>
-      <div class="additional-goods__header">
-        <div class="additional-goods__header-line additional-goods_header-line-tablet-show">
-        </div>
-        <span class="additional-goods__header-sub-span">
-          Дополнительные товары
-        </span>
-        <div class="additional-goods__header-line additional-goods_header-right-line">
-        </div>
-      </div>
-      <div class="additional-goods__content">
-        <div class="additional-goods__content-desktop-articles">
-          <article class="additional-goods__article">
-            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
-            <div class="additional-goods__article-main-div">
-              <div class="additional-goods__article-main-text">
-                <span class="additional-goods__article-header">
-                  Сахарозаменитель
-                </span>
-                <div class="additional-goods__article-content">
-                  <span class="additional-goods__article-how-many-weight">
-                    1 упаковка (100 г)
-                  </span>
-                  <span class="additional-goods__article-how-many-price">
-                    200 Р.
-                  </span>
-                </div>
-              </div>
-              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
-                Заказать
-              </a>
-            </div>
-          </article>
-          <article class="additional-goods__article">
-            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
-            <div class="additional-goods__article-main-div">
-              <div class="additional-goods__article-main-text">
-                <span class="additional-goods__article-header">
-                  Питьевая вода
-                </span>
-                <div class="additional-goods__article-content">
-                  <span class="additional-goods__article-how-many-weight additional-goods__article-five-litres">
-                    5 литров
-                  </span>
-                  <span class="additional-goods__article-how-many-price additional-goods__article-fifty-rubles">
-                    50 Р.
-                  </span>
-                </div>
-              </div>
-              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
-                Заказать
-              </a>
-            </div>
-          </article>
-          <article class="additional-goods__article">
-            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
-            <div class="additional-goods__article-main-div">
-              <div class="additional-goods__article-main-text">
-                <div class="additional-goods__article-header">
-                  Молоко
-                </div>
-                <div class="additional-goods__article-content">
-                  <span
-                    class="additional-goods__article-how-many-weight additional-goods__article-how-many-weigh-one-litres">
-                    1 литр
-                  </span>
-                  <span class="additional-goods__article-how-many-price additional-goods__article-how-many-weight-milk">
-                    100 Р.
-                  </span>
-                </div>
-              </div>
-              <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
-                Заказать
-              </a>
-            </div>
-          </article>
-          <article class="additional-goods__article additional-goods__article-last-child">
-            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
-            <div class="additional-goods__article-main-div">
-              <div class="additional-goods__article-main-text">
-                <span class="additional-goods__article-header">
-                  Витамины
-                </span>
-                <div class="additional-goods__article-content">
-                  <span class="additional-goods__article-how-many-weight additional-goods__article-thirty-grammes">
-                    1 упаковка (30 г)
-                  </span>
-                  <span class="additional-goods__article-how-many-price additional-goods__article-three-hundred-rubles">
-                    300 Р.
-                  </span>
-                </div>
-              </div>
-              <a class="additional-goods__article-order" href="basket.html"
-                aria-label="order additional good">Заказать</a>
-            </div>
-          </article>
-        </div>
-        <div class="additional-goods__green-background">
-          <img src="img/gift.png" alt="gift" width="55" height="61" class="additional-goods__gift-image">
-          <span class="additional-goods__green-background-text">
-            Закажите все<br class="additional-goods__br">
-            и получите чехол для
-            кота в подарок!
-          </span>
-        </div>
-      </div>
-    </section>
   </main>
+  <section class="additional-goods">
+    <h2 class="additional-goods__hidden-header">Additional goods</h2>
+    <div class="additional-goods__header">
+      <!--<div class="additional-goods__header-line additional-goods__header-line-tablet-show">
+      </div>-->
+      <span class="additional-goods__header-sub-span">
+        Дополнительные товары
+      </span>
+     <!-- <div class="additional-goods__header-line additional-goods__header-right-line">
+      </div>-->
+    </div>
+    <div class="additional-goods__content">
+      <div class="additional-goods__content-desktop-articles">
+        <article class="additional-goods__article">
+          <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
+          <div class="additional-goods__article-main-div">
+            <div class="additional-goods__article-main-text">
+              <span class="additional-goods__article-header">
+                Сахарозаменитель
+              </span>
+              <div class="additional-goods__article-content">
+                <span class="additional-goods__article-how-many-weight">
+                  1 упаковка (100 г)
+                </span>
+                <span class="additional-goods__article-how-many-price">
+                  200 Р.
+                </span>
+              </div>
+            </div>
+            <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
+              Заказать
+            </a>
+          </div>
+        </article>
+        <article class="additional-goods__article">
+          <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
+          <div class="additional-goods__article-main-div">
+            <div class="additional-goods__article-main-text">
+              <span class="additional-goods__article-header">
+                Питьевая вода
+              </span>
+              <div class="additional-goods__article-content">
+                <span class="additional-goods__article-how-many-weight additional-goods__article-five-litres">
+                  5 литров
+                </span>
+                <span class="additional-goods__article-how-many-price additional-goods__article-fifty-rubles">
+                  50 Р.
+                </span>
+              </div>
+            </div>
+            <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
+              Заказать
+            </a>
+          </div>
+        </article>
+        <article class="additional-goods__article">
+          <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
+          <div class="additional-goods__article-main-div">
+            <div class="additional-goods__article-main-text">
+              <div class="additional-goods__article-header">
+                Молоко
+              </div>
+              <div class="additional-goods__article-content">
+                <span
+                  class="additional-goods__article-how-many-weight additional-goods__article-how-many-weigh-one-litres">
+                  1 литр
+                </span>
+                <span class="additional-goods__article-how-many-price additional-goods__article-how-many-weight-milk">
+                  100 Р.
+                </span>
+              </div>
+            </div>
+            <a class="additional-goods__article-order" href="basket.html" aria-label="order additional good">
+              Заказать
+            </a>
+          </div>
+        </article>
+        <article class="additional-goods__article additional-goods__article-last-child">
+          <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
+          <div class="additional-goods__article-main-div">
+            <div class="additional-goods__article-main-text">
+              <span class="additional-goods__article-header">
+                Витамины
+              </span>
+              <div class="additional-goods__article-content">
+                <span class="additional-goods__article-how-many-weight additional-goods__article-thirty-grammes">
+                  1 упаковка (30 г)
+                </span>
+                <span class="additional-goods__article-how-many-price additional-goods__article-three-hundred-rubles">
+                  300 Р.
+                </span>
+              </div>
+            </div>
+            <a class="additional-goods__article-order" href="basket.html"
+              aria-label="order additional good">Заказать</a>
+          </div>
+        </article>
+      </div>
+      <div class="additional-goods__green-background">
+        <img src="img/gift.png" alt="gift" width="55" height="61" class="additional-goods__gift-image">
+        <span class="additional-goods__green-background-text">
+          Закажите все<br class="additional-goods__br">
+          и получите чехол для
+          кота в подарок!
+        </span>
+      </div>
+    </div>
+  </section>
   <div class="map">
     <div class="map__communicating map__communicating-form map__communicating--catalog-block">
       <div class="map__communicating-main-text">
@@ -613,7 +613,7 @@
           <span class="map__communicating-address-city">Санкт-Петербург</span></span>
       </div>
     </div>
-    <div class="map__img map__img-catalog"><img src="img/map-pin.png" alt="map-pin" class="map__map-pin"></div>
+      <iframe class="map__iframe-thing" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1998.6099477678288!2d30.323261120376586!3d59.93861426452755!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca640933%3A0x8403eb878242dbd5!2sDokhodnyy%20Dom%20N.%20A.%20Mel&#39;tsera!5e0!3m2!1sen!2sua!4v1590414500268!5m2!1sen!2sua" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
   <footer class="footer footer-index footer-catalog">
     <div class="footer__footer-content">
@@ -651,7 +651,7 @@
           <span class="footer__name-org"> HTML Academy</span>
 
 
-          <svg class="footer__right-logo-organization" height="34">
+          <svg class="footer__right-logo-organization" height="34" width="27">
             <use xlink:href="#footer-logo-htmlacademy"></use>
           </svg>
         </a>
