--- a/source/form.html
+++ b/source/form.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Подбор программы занятий</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/style.min.css" rel="stylesheet" type="text/css">
   <script src="js/picturefill.js"></script>
 </head>
 
 <body class="body">
   <svg width="0" height="0" style="display: none;">
-    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 13" id="icon-mail" class="main-form__email-input-img">
+    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 13" id="icon-mail">
       <path
         d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z">
       </path>
@@ -80,7 +80,9 @@
     </div>
   </header>
   <main class="main-form">
+
     <form action="https://echo.htmlacademy.ru" class="form">
+      <div class="main-form__wrapper">
       <div class="main-form__content">
         <h1 class="main-form__how-u-can-choose-program">Подбор программы</h1>
         <span class="main-form__full-anket">Заполните анкету и мы подберем программу питания для вашего кота</span>
@@ -120,11 +122,11 @@
         </div>
       </div>
       <div class="main-form__contact">
-        <div class="main-form__contact-data-for-cat-owner-left-line"></div>
+        <!--<div class="main-form__contact-data-for-cat-owner-left-line"></div>-->
         <h2 class="main-form__contact-data-for-cat-owner">
           Контактные данные (владельца кота)
         </h2>
-        <div class="main-form__contact-data-for-cat-owner-line"></div>
+        <!--<div class="main-form__contact-data-for-cat-owner-line"></div>-->
       </div>
       <div class="main-form__contact__email-plus-phone">
         <div class="main-form__sub main-form__contact-data-cat-owner-email">
@@ -143,20 +145,20 @@
         </div>
       </div>
       <div class="main-form__commentary">
-        <div class="main-form__commentary-left-line"></div>
+        <!--<div class="main-form__commentary-left-line"></div>-->
         <span class="main-form__commentary-comment">
           Комментарий
         </span>
-        <div class="main-form__commentary-line"></div>
+        <!--<div class="main-form__commentary-line"></div>-->
       </div>
       <div class="main-form__textarea">
         <textarea name="commentary" class="main-form__commentary-textarea">Расскажите обо всех повадках кота
           </textarea>
       </div>
       <div class="main-form__sub-additional">
-        <div class="main-form__sub-additional-left-line"></div>
+        <!--<div class="main-form__sub-additional-left-line"></div>-->
         <span class="main-form__sub-add">Дополнительно</span>
-        <div class="main-form__sub-additional-line"></div>
+        <!--<div class="main-form__sub-additional-line"></div>-->
       </div>
       <div class="main-form__checkboxes">
         <div class="main-form__sub-two-checkbox">
@@ -192,6 +194,7 @@
         <input type="submit" class="main-form__submit-input" value="Отправить заявку">
         <span class="main-form__required-fields-text">* — Обязательные поля</span>
       </div>
+    </div>
     </form>
   </main>
   <div class="map">
@@ -205,10 +208,9 @@
             class="map__communicating-address-city map__communicating-address-city--form">Санкт-Петербург</span></span>
       </div>
     </div>
-    <div class="map__img map__img-catalog map__img-form"><img src="img/map-pin.png" alt="map-pin"
-        class="map__map-pin map__map-pin-form"></div>
+    <iframe class="map__iframe-thing" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1998.6099477678288!2d30.323261120376586!3d59.93861426452755!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca640933%3A0x8403eb878242dbd5!2sDokhodnyy%20Dom%20N.%20A.%20Mel&#39;tsera!5e0!3m2!1sen!2sua!4v1590414500268!5m2!1sen!2sua" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
-  <footer class="footer footer-index ">
+  <footer class="footer footer-index footer-catalog footer-form">
     <div class="footer__footer-content">
       <div class="footer__logo footer__logo-index footer-logo-form">
         <a href="catenergy.html" aria-label="footer catenergy"><img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image"></a>
@@ -239,7 +241,7 @@
       <div class="footer__right-logo">
         <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization" aria-label="footer right logo">
           <span class="footer__name-org"> HTML Academy</span>
-          <svg class="footer__right-logo-organization" height="34">
+          <svg class="footer__right-logo-organization" height="34" width="27">
             <use xlink:href="#footer-logo-htmlacademy"></use>
           </svg>
         </a>
